--- a/pruebas/pag-web/service.yaml
+++ b/pruebas/pag-web/service.yaml
@@ -1,14 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: miapp-service
-  labels:
-    app: miapp
+  name: miapp2025-service
 spec:
-  type: LoadBalancer  # Puedes usar NodePort si no tienes un LoadBalancer
   selector:
-    app: miapp
+    app: miapp2025  # Debe coincidir con el label del Deployment
   ports:
-  - protocol: TCP
-    port: 3000          # Puerto externo que usas para acceder
-    targetPort: 3000    # Puerto en el contenedor
+    - protocol: TCP
+      port: 80       # Puerto externo del LoadBalancer
+      targetPort: 3000  # Puerto del contenedor (Next.js)
+  type: LoadBalancer  # Asigna un IP externa automáticamente
