--- a/pruebas/pag-web/deploy.yaml
+++ b/pruebas/pag-web/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: miapp2025
 spec:
-  replicas: 1  # Número de réplicas (pods)
+  replicas: 1  
   selector:
     matchLabels:
       app: miapp2025
