--- a/pruebas/web_harbor_1/webapp/service.yaml
+++ b/pruebas/web_harbor_1/webapp/service.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-  type: NodePort  # O NodePort si no tienes LoadBalancer
+  type: LoadBalancer  # O NodePort si no tienes LoadBalancer
