--- a/pruebas/web_harbor_1/webapp/service.yaml
+++ b/pruebas/web_harbor_1/webapp/service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gestion-academica
+  namespace: webapp
 spec:
+  type: LoadBalancer  
   selector:
     app: gestion-academica
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
-  type: NodePort # O NodePort si no tienes LoadBalancer
