--- a/pruebas/web_harbor_1/webapp/service.yaml
+++ b/pruebas/web_harbor_1/webapp/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gestion-academica
   namespace: webapp
 spec:
-  type: NodePort  
+  type: Loadbalancer 
   selector:
     app: gestion-academica
   ports:
