--- a/pruebas/web-harbor-4/service.yaml
+++ b/pruebas/web-harbor-4/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: gestion-academica
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: gestion-academica
   ports:
