--- a/pruebas/inyector-vault/fleet.yaml
+++ b/pruebas/inyector-vault/fleet.yaml
@@ -7,6 +7,8 @@ helm:
   values:
     injector:
       enabled: true
+      extraEnvironmentVars:
+        VAULT_ADDR: "http://10.188.106.55:8200"
     server:
       enabled: false
     externalVault:
