--- a/pruebas/inyector-vault/fleet.yaml
+++ b/pruebas/inyector-vault/fleet.yaml
@@ -7,9 +7,9 @@ helm:
   values:
     injector:
       enabled: true
-      extraEnvironmentVars:
-        VAULT_ADDR: "http://10.188.106.55:8200"
+      env:
         AGENT_INJECT_VAULT_ADDR: "http://10.188.106.55:8200"
+        VAULT_ADDR: "http://10.188.106.55:8200"
     server:
       enabled: false
     externalVault:
