--- a/pruebas/buzybox-vault/2-buzy.yaml
+++ b/pruebas/buzybox-vault/2-buzy.yaml
@@ -1,30 +1,17 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox-vault
+  name: alpine-prueba
   namespace: prueba01
   labels:
-    app: busybox-vault
-  annotations:
-    vault.hashicorp.com/agent-inject: "true"
-    vault.hashicorp.com/role: "devweb-app"
-    vault.hashicorp.com/agent-inject-secret-credentials.env: "secret/data/devwebapp/config"
-    vault.hashicorp.com/agent-inject-template-credentials.env: |
-      {{- with secret "secret/data/devwebapp/config" -}}
-      POSTGRES_USER={{ .Data.data.username }}
-      POSTGRES_PASSWORD={{ .Data.data.password }}
-      {{- end }}
+    app: alpine-prueba
 spec:
   serviceAccountName: internal-app
   containers:
-    - name: busybox
-      image: busybox:latest
+    - name: alpine
+      image: alpine:latest
       command: ["/bin/sh", "-c"]
       args:
         - |
-          echo "==> Variables inyectadas por Vault:"
-          cat /vault/secrets/credentials.env
-          echo
-          env $(cat /vault/secrets/credentials.env) env | grep POSTGRES
+          echo "Alpine levantado correctamente en el namespace prueba01"
           sleep 3600
----
