--- a/pruebas/buzybox-vault/3-buzy.yaml
+++ b/pruebas/buzybox-vault/3-buzy.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: postgres-dev1
-  namespace: prueba01
+  namespace: vault
   labels:
     app: postgres-dev
   annotations:
