--- a/pruebas/postgres-vault/3-pod.yaml
+++ b/pruebas/postgres-vault/3-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: postgres-dev
-  namespace: default
+  namespace: test1
   labels:
     app: postgres-dev
   annotations:
